--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Checkout Android Keystore
         uses: actions/checkout@v4
         with:
-          repository: pppscn/keystore
+          repository: l-g-t/keystore   
+          #repository: pppscn/keystore
           token: ${{ secrets.TOKEN }} # 连接仓库的token,需要单独配置
           path: keystore # 仓库的根目录名
       # 打包release
