--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -46,8 +46,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: SmsForwarder ${{ github.ref }}
+          tag_name: ${{ github.main }}
+          release_name: SmsForwarder ${{ github.main }}
+          #tag_name: ${{ github.ref }}
+          #release_name: SmsForwarder ${{ github.ref }}
           draft: false
           prerelease: false
       # 上传至release的资源
