--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -58,4 +58,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          asset_paths: '["./build/app/outputs/apk/release/SmsF_*"]'
+          asset_paths: '["./build/app/outputs/apk/release/SmsF"]'
