--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -52,7 +52,8 @@ jobs:
           #release_name: SmsForwarder ${{ github.ref }}
           draft: false
           prerelease: false
-          allowUpdates: true  # 允许更新现有的发布
+          commitish: ${{ github\.sha }}  
+          # 添加 commitish 参数
           
       # 上传至release的资源
       - name: Upload release binaries
