--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -55,9 +55,9 @@ jobs:
           #release_name: SmsForwarder ${{ github.ref }}
           draft: false
           prerelease: false
-          allowUpdates: true
+          ##allowUpdates: true
           # 允许更新现有的发布 
-          #commitish: ${{ github.sha }}  
+          commitish: ${{ github.sha }}  
           # 添加 commitish 参数
           
       # 上传至release的资源
